web-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-pod-service
  labels:
    app: demo-app
spec:
  selector:
    app: apache-pod
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
