web-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: apache-route
  labels:
    app: demo-app
spec:
  host: apache-pod-service.local
  to:
    kind: Service
    name: apache-pod-service
